[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
reqwest = "0.11.24"
serde = "1.0.196"
serde_json = "1.0.113"
worker = "0.0.17"

[profile.release]
lto = true
strip = true
codegen-units = 1
